# SunshineVulkan

./: .gitignore  .gitmodules  CMakeLists.txt
res/Shaders/: BasicFragment.frag  BasicVertex.vert  basicfrag.spv  basicvert.spv  compileBasicShader.bat
res/Shaders/fullQuad/: BasicQuad.frag  BasicQuad.vert  compileFullQuadShader.bat  fullquadfrag.spv  fullquadvert.spv
src/: main.cpp
